Adding TravisCI config

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -9,3 +9,6 @@
 Source/**/obj
 Source/**/bin
 *.user
+Source/packages
+Mods/
+lib/oni_version
