UnityEngine.UI.dll should not be copied in the output directory.

--- a/Source/DisinfectionStorageMod/DisinfectionStorageMod.csproj
+++ b/Source/DisinfectionStorageMod/DisinfectionStorageMod.csproj
@@ -54,6 +54,7 @@
     </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>..\..\lib\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
